--- a/src/css/skeleton/skeleton.css
+++ b/src/css/skeleton/skeleton.css
@@ -159,7 +159,7 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
-  color: #1EAEDB; }
+  color: #00a3cc; }
 a:hover {
   color: #0FA0CE; }
 
