--- a/src/app/auth/css/auth.css
+++ b/src/app/auth/css/auth.css
@@ -1,4 +1,17 @@
-.auth-container {
-    width: 400px;
-    margin: 5% auto;
+
+/* Devices larger than a phone */
+@media (max-width: 550px) {
+  .auth-container {
+    width: 90%;
+    margin: auto;
+    padding: 0; }
+}
+
+/* Devices smaller than a phone */
+@media (min-width: 550px) {
+  .auth-container {
+    /* 90% of Phablet size */
+    max-width: 495px;
+    margin: auto;
+    padding: 0; }
 }
