--- a/src/ux/css/nav.css
+++ b/src/ux/css/nav.css
@@ -1,92 +1,22 @@
-/* This stylesheet draws heavily from the Skeleton CSS example page */
+.navbar-brand {
+    font-family: 'Oxygen', Helvetica, Arial, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+}
 
-/* NavigationBar (Desktop & Mobile) */
-.navbar + .docs-section {
-    border-top-width: 0; }
-.navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 6.5rem; }
-.navbar, .mobile-nav {
-    display: block;
-    width: 100%;
-    background: #fff;
-    z-index: 99;
-    border-top: 1px solid #e0e0e0;
-    border-bottom: 1px solid #e0e0e0; }
-.mobile-nav {
-    display: none;
-    position: fixed;
-    top: 6.5rem;
-    left: 0; }
-.navbar-list {
-    list-style: none;
-    margin-bottom: 0; }
-.mobile-nav-list {
-    list-style: none;
-    margin: 0; }
-.mobile-nav-list li:last-child{
-    border-bottom: none; }
-.navbar-item {
-    position: relative;
-    float: left;
-    margin-bottom: 0; }
-.mobile-nav-item {
-    height: 4rem;
-    margin: 0;
-    border-bottom: 1px solid #e5e5e5; }
+.navbar-nav {
+    color: #333;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
 .navbar-link {
-    margin: 0 10px 0 5px;
-    line-height: 6.5rem;
-    margin: 0 20px 0 5px; }
-.navbar-link, .mobile-nav-link {
-    text-transform: uppercase;
-    font-size: 1.1rem;
-    font-weight: 600;
-    letter-spacing: .2rem;
-    line-height: 6.5rem;
+    font-family: 'Oxygen', Helvetica, Arial, sans-serif;
+    font-size: 90%;
+    letter-spacing: 0.1rem;
     text-decoration: none;
-    color: #333; }
-.mobile-nav-link {
-    vertical-align: middle;
-    line-height: 4rem; }
-.mobile-nav-link span {
-    margin: 0 15px 0 0; }
-.navbar-link.active,
-.mobile-nav-link.active {
-    color: #00a3cc; }
-.navbar-title {
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: .2rem;
-    line-height: 6.5rem;
-    text-decoration: none;
-    margin: 0 20px 0 0;
-    font-size: 1.6rem; }
-#mobile-nav-button {
-    font-size: 2rem;
-    text-align: center;
-    vertical-align: middle;
-    margin: 10px 0 10px 20px;
-    padding: 3px;
-    width: 42px;
-    height: 42px;
-    overflow: hidden;
 }
 
-/* Smaller than desktop */
-@media (max-width: 750px) {
-    .navbar-link {
-        display: none; }
-    .navbar-title {
-        display: block; }
-    .mobile-nav.visible {
-        display: block; }
-}
-
-/* Larger than desktop */
-@media (min-width: 750px) {
-    #mobile-nav-button {
-        display: none; }
+.navbar-link:hover {
+    text-decoration: none;
 }
