--- a/src/ux/css/app.css
+++ b/src/ux/css/app.css
@@ -1,3 +1,9 @@
-.main-container {
-    margin-top: 5rem;
+h1.page-title {
+    font-size: 24px;
+}
+
+@media (min-width: 992px) {
+    .container {
+        max-width: 750px;
+    }
 }
