--- a/src/ux/css/app.css
+++ b/src/ux/css/app.css
@@ -1,6 +1,6 @@
-h1.page-title {
+/*h1.page-title {
     font-size: 24px;
-}
+}*/
 
 /* Modifies the maximum container width */
 @media (min-width: 992px) {
