--- a/src/sass/_Color.sass
+++ b/src/sass/_Color.sass
@@ -3,8 +3,11 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 $color-initial: #fff !default
-$color-primary: #9b4dca !default
+$color-primary: #187a7f !default
 $color-secondary: #606c76 !default
 $color-tertiary: #f4f5f6 !default
 $color-quaternary: #d1d1d1 !default
 $color-quinary: #e1e1e1 !default
+$color-success: #1fa81f
+$color-warning: #d27627
+$color-error: #d22727
