--- a/src/sass/_Typography.sass
+++ b/src/sass/_Typography.sass
@@ -15,8 +15,8 @@ h3,
 h4,
 h5,
 h6
+	font-family: 'Oxygen', 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif
 	font-weight: 300
-	letter-spacing: -.1rem
 	margin-bottom: 2.0rem
 	margin-top: 0
 
