--- a/src/sass/_Color.sass
+++ b/src/sass/_Color.sass
@@ -9,5 +9,5 @@ $color-tertiary: #f4f5f6 !default
 $color-quaternary: #d1d1d1 !default
 $color-quinary: #e1e1e1 !default
 $color-success: #1fa81f
-$color-warning: #d27627
-$color-error: #d22727
+$color-warning: #803b00
+$color-error: #800000
