--- a/src/sass/_NavBar.sass
+++ b/src/sass/_NavBar.sass
@@ -22,9 +22,9 @@ $navbar-height: 66px
 
     &:hover
         color: $color-primary
-
-.active a
-    color: $color-primary
+    
+    &.active
+        color: $color-primary
 
 .navbar-header
     font-size: 150%
