Add danger button

--- a/src/sass/_Button.sass
+++ b/src/sass/_Button.sass
@@ -73,3 +73,11 @@ input[type='submit']
 			&:focus,
 			&:hover
 				color: $color-primary
+
+	&.button-danger
+		background-color: $color-error
+		border-color: $color-error
+
+		&:hover
+			background-color: $color-secondary
+			border-color: $color-secondary
