--- a/src/sass/_Typography.sass
+++ b/src/sass/_Typography.sass
@@ -8,12 +8,17 @@ strong
 
 p
 	margin-top: 0
+	color: darken($color-secondary, 25%)
 
 	&.help-block
 		font-size: 80%
 
 	&.error
 		color: $color-error
+
+small
+	font-size: 65%
+	color: lighten($color-secondary, 25%)
 
 h1,
 h2,
@@ -40,15 +45,12 @@ h3
 
 h4
 	font-size: 2.2rem
-	letter-spacing: -.08rem
 	line-height: 1.35
 
 h5
 	font-size: 1.8rem
-	letter-spacing: -.05rem
 	line-height: 1.5
 
 h6
 	font-size: 1.6rem
-	letter-spacing: 0
 	line-height: 1.4
