Style text in textarea

--- a/src/sass/_Form.sass
+++ b/src/sass/_Form.sass
@@ -20,6 +20,8 @@ select
 	height: 3.8rem
 	padding: .6rem 1.0rem // The .6rem vertically centers text on FF, ignored by Webkit
 	width: 100%
+	font-size: 1.4rem
+	font-family: sans-serif
 
 	&:focus
 		border-color: $color-primary
@@ -36,7 +38,7 @@ select
 		background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="14" viewBox="0 0 29 14" width="29"><path fill="#9b4dca" d="M9.37727 3.625l5.08154 6.93523L19.54036 3.625"/></svg>')
 
 textarea
-	min-height: 6.5rem
+	min-height: 10rem
 
 label,
 legend
