--- a/src/sass/_NavBar.sass
+++ b/src/sass/_NavBar.sass
@@ -15,7 +15,7 @@ $navbar-height: 66px
     letter-spacing: 2px
     text-transform: uppercase
     text-decoration: none
-    border-bottom: 1px solid #eee
+    border-bottom: 0.1rem solid #eee
 
 .navbar a
     color: $color-secondary
