Fix NavBar transparency issue

--- a/src/sass/_NavBar.sass
+++ b/src/sass/_NavBar.sass
@@ -16,6 +16,8 @@ $navbar-height: 66px
     text-transform: uppercase
     text-decoration: none
     border-bottom: 0.1rem solid #eee
+    z-index: 10
+    background-color: #fff
 
 .navbar a
     color: $color-secondary
