--- a/src/sass/_Pageination.sass
+++ b/src/sass/_Pageination.sass
@@ -1,6 +1,6 @@
 
-// Mai
+// Pagination
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
-.main
-    padding-top: $navbar-height * 1.5
+.page-controls
+    height: 2.5rem
