--- a/src/sass/milligram.sass
+++ b/src/sass/milligram.sass
@@ -2,6 +2,7 @@
 // Sass Modules
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
+@import Media
 @import Color
 @import Base
 @import Blockquote
@@ -17,8 +18,6 @@
 @import Typography
 @import Image
 @import Utility
-
-// Custom add-ons
 @import NavBar
 @import Pages
 @import Pageination
