--- a/src/sass/_Utility.sass
+++ b/src/sass/_Utility.sass
@@ -26,3 +26,9 @@
 	overflow: hidden
 	clip: rect(0,0,0,0)
 	border: 0
+
+.xs-only
+	display: none
+
+	@media only screen and (max-width: $xs-device)
+		display: inline
