--- a/src/sass/_Pages.sass
+++ b/src/sass/_Pages.sass
@@ -5,6 +5,9 @@
 .main
     padding-top: $navbar-height * 1.5
 
+    @media only screen and (max-width: $xs-device)
+        padding-top: $navbar-height * 1.2
+
 .page-title
     // height: 7.5rem
 
