Add .narrow subclass for signup/login

--- a/src/sass/_Grid.sass
+++ b/src/sass/_Grid.sass
@@ -10,6 +10,10 @@
 	position: relative
 	width: 100%
 
+	&.narrow
+		max-width: 51.2rem
+
+
 // Using flexbox for the grid, inspired by Philip Walton:
 // http://philipwalton.github.io/solved-by-flexbox/demos/grids/
 // By default each .column within a .row will evenly take up
