--- a/src/sass/_NavBar.sass
+++ b/src/sass/_NavBar.sass
@@ -103,7 +103,7 @@ $navbar-height: 6.6rem
         margin: 0
     
     span
-        font-size: 24px
+        font-size: 2.4rem
 
 .hidden
     @media only screen and (max-width: $xs-device)
