--- a/src/sass/_Typography.sass
+++ b/src/sass/_Typography.sass
@@ -8,7 +8,7 @@ strong
 
 p
 	margin-top: 0
-	color: darken($color-secondary, 25%)
+	color: darken($color-secondary, 15%)
 
 	&.help-block
 		font-size: 80%
@@ -33,23 +33,39 @@ h6
 
 h1
 	font-size: 3rem
-	line-height: 1.2
+	line-height: 1.25
+
+	@media only screen and (max-width: $xs-device)
+		font-size: 2.25rem
+		line-height: 1.5
 
 h2
 	font-size: 3.75rem
 	line-height: 1.25
 
+	@media only screen and (max-width: $xs-device)
+		font-size: 2.1rem
+
 h3
 	font-size: 2.5rem
 	line-height: 1.3
+
+	@media only screen and (max-width: $xs-device)
+		font-size: 2rem
 
 h4
 	font-size: 2.2rem
 	line-height: 1.35
 
+	@media only screen and (max-width: $xs-device)
+		font-size: 1.8rem
+
 h5
 	font-size: 1.8rem
 	line-height: 1.5
+
+	@media only screen and (max-width: $xs-device)
+		font-size: 1.75rem
 
 h6
 	font-size: 1.6rem
