Minor incidental changes

--- a/src/sass/_Pages.sass
+++ b/src/sass/_Pages.sass
@@ -8,8 +8,8 @@
     @media only screen and (max-width: $xs-device)
         padding-top: $navbar-height * 1.2
 
-.page-title
-    // height: 7.5rem
+// .page-title
+//     height: 5.5rem
 
 .page-title h1
     display: inline-block
