--- a/src/sass/_Button.sass
+++ b/src/sass/_Button.sass
@@ -81,3 +81,11 @@ input[type='submit']
 		&:hover
 			background-color: $color-secondary
 			border-color: $color-secondary
+
+	&.button-square
+		width: 2.8rem
+		height: 2.8rem
+		padding: 0
+
+	&.button-span
+		width: 100%
