--- a/src/sass/_Glyphicons.sass
+++ b/src/sass/_Glyphicons.sass
@@ -3,4 +3,5 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 .glyphicons span
-		font-size: 2.4rem
+	font-size: 2.4rem
+	line-height: 2.4rem
