--- a/src/sass/_Pages.sass
+++ b/src/sass/_Pages.sass
@@ -1,5 +1,5 @@
 
-// Mai
+// Pages
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 .main
@@ -17,19 +17,3 @@
 
 .page-title hr
     margin: 1.5rem auto
-
-.page-control
-    max-width: 76.8rem
-    width: 100%
-    border-top: 0.1rem solid #eee
-    border-bottom: 0.1rem solid #eee
-    margin: 0 auto 2rem
-    padding: 0
-
-    button,
-    .button
-        margin: 0
-        padding: 0
-        height: 3rem
-        line-height: 2.8rem
-        font-size: 1.6rem
